--- a/_quarto.yml
+++ b/_quarto.yml
@@ -1,6 +1,6 @@
 project:
   type: website
-  output-dir: C:/Users/melser/Documents/GitHub/E-Portfolio
+  output-dir: C:/Users/adelync.stu/Documents/FCOR 599/E-Portfolio/E-Portfolio-main/E-Portfolio-main/E-Portfolio
 
 website:
   title: "Your E-Portfolio"
