--- a/_quarto.yml
+++ b/_quarto.yml
@@ -3,7 +3,7 @@ project:
   output-dir: C:/Users/adelync.stu/Documents/FCOR 599/E-Portfolio/E-Portfolio-main/E-Portfolio-main/E-Portfolio
 
 website:
-  title: "Your E-Portfolio"
+  title: "Adelyn Chapman E-Portfolio"
   navbar:
     left:
       - href: index.qmd
